# omi-cpp-protocol-statistics

./: .gitignore  CMakeLists.txt  License  ReadMe.md
cme/futures/mdp3/: CMakeLists.txt  main.cpp
cme/futures/mdp3/packet/: Parser.hpp  Result.hpp  ZipPcap.hpp
cme/futures/mdp3/packet/decompressor/: ZipDecompressor.hpp  ZipPcap.hpp
cme/futures/mdp3/protocol/: definitions.hpp
cme/futures/mdp3/protocol/bitfields/: InstAttribValue.hpp  MatchEventIndicator.hpp  SettlPriceType.hpp
cme/futures/mdp3/protocol/groups/: BrokenDatesGroup.hpp  ChannelResetGroup.hpp  CollateralMarketValueGroup.hpp  EventsGroup.hpp  FeedTypesGroup.hpp  IncrementalRefreshBookGroup.hpp  IncrementalRefreshBookLongGroup.hpp  IncrementalRefreshBookLongOrderIdGroups.hpp  IncrementalRefreshBookOrderIdGroup.hpp  IncrementalRefreshDailyStatisticsGroup.hpp  IncrementalRefreshLimitsBandingGroup.hpp  IncrementalRefreshOrderBookGroup.hpp  IncrementalRefreshSessionStatisticsGroup.hpp  IncrementalRefreshSessionStatisticsLongGroup.hpp  IncrementalRefreshTradeSummaryGroup.hpp  IncrementalRefreshTradeSummaryLongGroup.hpp  IncrementalRefreshTradeSummaryLongOrderIdGroup.hpp  IncrementalRefreshTradeSummaryOrderIdGroup.hpp  IncrementalRefreshVolumeGroup.hpp  IncrementalRefreshVolumeLongGroup.hpp  InstAttribGroup.hpp  LegsGroup.hpp  LotTypeRulesGroup.hpp  OptionRelatedInstrumentsGroup.hpp  OptionUnderlyingsGroup.hpp  RelatedSymGroup.hpp  RepoRelatedInstrumentsGroup.hpp  RepoUnderlyingsGroup.hpp  SecurityStatusWorkupGroup.hpp  SnapshotFullRefreshGroup.hpp  SnapshotFullRefreshLongGroup.hpp  SnapshotFullRefreshOrderBookGroup.hpp  SnapshotFullRefreshTcpGroup.hpp  SnapshotRefreshTopOrdersGroup.hpp  SnapshotfullRefreshTcpLongGroup.hpp  TradingSessionsGroup.hpp
cme/futures/mdp3/protocol/iterators/: BrokenDatesGroupIterator.hpp  ChannelResetGroupIterator.hpp  CollateralMarketValueGroupIterator.hpp  EventsGroupIterator.hpp  FeedTypesGroupIterator.hpp  IncrementalRefreshBookGroupIterator.hpp  IncrementalRefreshBookLongGroupIterator.hpp  IncrementalRefreshBookLongOrderIdGroupsIterator.hpp  IncrementalRefreshBookOrderIdGroupIterator.hpp  IncrementalRefreshDailyStatisticsGroupIterator.hpp  IncrementalRefreshLimitsBandingGroupIterator.hpp  IncrementalRefreshOrderBookGroupIterator.hpp  IncrementalRefreshSessionStatisticsGroupIterator.hpp  IncrementalRefreshSessionStatisticsLongGroupIterator.hpp  IncrementalRefreshTradeSummaryGroupIterator.hpp  IncrementalRefreshTradeSummaryLongGroupIterator.hpp  IncrementalRefreshTradeSummaryLongOrderIdGroupIterator.hpp  IncrementalRefreshTradeSummaryOrderIdGroupIterator.hpp  IncrementalRefreshVolumeGroupIterator.hpp  IncrementalRefreshVolumeLongGroupIterator.hpp  InstAttribGroupIterator.hpp  LegsGroupIterator.hpp  LotTypeRulesGroupIterator.hpp  MessageIterator.hpp  OptionRelatedInstrumentsGroupIterator.hpp  OptionUnderlyingsGroupIterator.hpp  RelatedSymGroupIterator.hpp  RepoRelatedInstrumentsGroupIterator.hpp  RepoUnderlyingsGroupIterator.hpp  SecurityStatusWorkupGroupIterator.hpp  SnapshotFullRefreshGroupIterator.hpp  SnapshotFullRefreshLongGroupIterator.hpp  SnapshotFullRefreshOrderBookGroupIterator.hpp  SnapshotFullRefreshTcpGroupIterator.hpp  SnapshotRefreshTopOrdersGroupIterator.hpp  SnapshotfullRefreshTcpLongGroupIterator.hpp  TradingSessionsGroupIterator.hpp
cme/futures/mdp3/protocol/messages/: AdminLogin.hpp  AdminLogout.hpp  ChannelReset.hpp  CollateralMarketValue.hpp  MdIncrementalRefreshBook.hpp  MdIncrementalRefreshBookLongQty.hpp  MdIncrementalRefreshDailyStatistics.hpp  MdIncrementalRefreshLimitsBanding.hpp  MdIncrementalRefreshOrderBook.hpp  MdIncrementalRefreshSessionStatistics.hpp  MdIncrementalRefreshSessionStatisticsLongQty.hpp  MdIncrementalRefreshTradeSummary.hpp  MdIncrementalRefreshTradeSummaryLongQty.hpp  MdIncrementalRefreshVolume.hpp  MdIncrementalRefreshVolumeLongQty.hpp  MdInstrumentDefinitionFixedIncome.hpp  MdInstrumentDefinitionFuture.hpp  MdInstrumentDefinitionFx.hpp  MdInstrumentDefinitionOption.hpp  MdInstrumentDefinitionRepo.hpp  MdInstrumentDefinitionSpread.hpp  QuoteRequest.hpp  SecurityStatus.hpp  SecurityStatusWorkup.hpp  SnapshotFullRefresh.hpp  SnapshotFullRefreshLongQty.hpp  SnapshotFullRefreshOrderBook.hpp  SnapshotFullRefreshTcp.hpp  SnapshotFullRefreshTcpLongQty.hpp  SnapshotRefreshTopOrders.hpp
cme/futures/mdp3/protocol/structs/: BinaryPacketHeader.hpp  GroupSize.hpp  GroupSize8Byte.hpp  MaturityMonthYear.hpp  Message.hpp  MessageHeader.hpp
cme/futures/mdp3/protocol/types/: AggressorIndicator.hpp  AggressorSide.hpp  AltMinPriceIncrement.hpp  AltMinQuoteLife.hpp  AltPriceIncrementConstraint.hpp  ApplId.hpp  Asset.hpp  BlockLength.hpp  BrokenDateEnd.hpp  BrokenDateGuid.hpp  BrokenDateSecurityId.hpp  BrokenDateStart.hpp  BrokenDateTermType.hpp  CfiCode.hpp  ClearedVolume.hpp  CollateralMarketPrice.hpp  ContractMultiplier.hpp  ContractMultiplierUnit.hpp  CountryOfIssue.hpp  CouponDayCount.hpp  CouponFrequencyPeriod.hpp  CouponFrequencyUnit.hpp  CouponRate.hpp  Currency.hpp  CurrentChunk.hpp  DatedDate.hpp  Day.hpp  DecayQuantity.hpp  DecayStartDate.hpp  DirtyPrice.hpp  DisplayFactor.hpp  (+167 more)
cme/futures/mdp3/statistics/: Settings.hpp  Statistics.hpp
cme/futures/mdp3/tests/: CMakeLists.txt  tests.cpp
iex/equities/deepplus/: CMakeLists.txt  main.cpp
iex/equities/deepplus/packet/: Parser.hpp  Result.hpp
iex/equities/deepplus/protocol/: definitions.hpp
iex/equities/deepplus/statistics/: Statistics.hpp
iex/equities/deepplus/tests/: CMakeLists.txt  tests.cpp
nasdaq/nsmequities/totalview/: CMakeLists.txt  Settings.hpp  main.cpp
nasdaq/nsmequities/totalview/packet/: Parser.hpp  PcapSource.hpp  Settings.hpp
nasdaq/nsmequities/totalview/protocol/: definitions.hpp
nasdaq/nsmequities/totalview/statistics/: Statistics.hpp
nasdaq/nsmequities/totalview/tests/: CMakeLists.txt  tests.cpp
siac/opra/recipient/: CMakeLists.txt  main.cpp
siac/opra/recipient/packet/: Parser.hpp  Result.hpp
siac/opra/recipient/protocol/: definitions.hpp
siac/opra/recipient/statistics/: Settings.hpp  Statistics.hpp
siac/opra/recipient/tests/: CMakeLists.txt  tests.cpp
(+278 files in other folders)
