find_package(GTest REQUIRED)

add_executable(iex_equities_deepplus_iextp_v1_0_1_statistics_tests tests.cpp)
target_include_directories(iex_equities_deepplus_iextp_v1_0_1_statistics_tests PRIVATE ${CMAKE_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/packet)
target_link_libraries(iex_equities_deepplus_iextp_v1_0_1_statistics_tests PRIVATE GTest::gtest_main)

include(GoogleTest)
gtest_discover_tests(iex_equities_deepplus_iextp_v1_0_1_statistics_tests)